exports[`selection should properly default to no parent when not passed one 1`] = `
Object {
  "div": Object {
    "::-moz-selection": Object {
      "background-color": "blue",
    },
    "::selection": Object {
      "background-color": "blue",
    },
  },
}
`;

exports[`selection should properly pass styles object and parent 1`] = `
Object {
  "div": Object {
    "section::-moz-selection": Object {
      "background-color": "blue",
    },
    "section::selection": Object {
      "background-color": "blue",
    },
  },
}
`;

exports[`selection should throw a warning when passed more than 2 parameters 1`] = `
Array [
  Array [
    "%c ✨ WARNING ✨ ---- mixins/selection.js --%c

selection %cwill be deprecated as of version 3.0 of ✨ polished. You should use the ::selection pseudo-element instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#selection%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
  Array [
    "%c ✨ WARNING ✨ ---- mixins/selection.js --%c

selection %cexpects a maximum of 2 parameters. However, you passed 3 parameters. These additional parameters were ignored.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#selection%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`selection should throw an error when not passed any parameters 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/selection.js --%c

selection %cexpects a minimum of 1 parameter. However, you only passed 0 parameters.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#selection%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`selection should throw an error when passed a non-object as its first parameter 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/selection.js --%c

selection %cexpects a 1st parameter of type object. However, you passed styles(string) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#selection%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`selection should throw an error when passed a non-string as its second parameter 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/selection.js --%c

selection %cexpects a 2nd parameter of type string. However, you passed 1(number) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#selection%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;
